Fixed issue with font readability

--- a/app/assets/stylesheets/my-styles.css
+++ b/app/assets/stylesheets/my-styles.css
@@ -61,7 +61,7 @@ body {
 }
 
 .thin {
-  font-weight: 300;
+  font-weight: 300 !important;
 }
 
 .red {
